refactor: simplify swagger contract (#11)
